# cpp_simple_server

./: .gitignore  CMakeLists.txt  Makefile  handler.cpp  handler.h  main.cpp  server  server.cpp  server.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h
include/: application.h  handler.h  server.h  thread_pool.h
include/resources/: event.h  socket.h  thread_pool.h  unix_socket.h
include/server/: application.h  daemon_client.h  daemon_server.h  handler.h  server.h
src/resources/: event.cpp  main.cpp  socket.cpp  tcp_socket.cpp  thread_pool.cpp  unix_socket.cpp
src/server/: application.cpp  daemon_client.cpp  daemon_server.cpp  handler.cpp  main.cpp  server.cpp  thread_pool.cpp
